--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,14 +8,15 @@
     <title>레이서 도서관</title>
 </head>
 <body>
-    {% if login %}
-    <header id="nav-bar">
-        <ul>
-            <li>메뉴 1</li>
-            <li>메뉴 2</li>
-            <li>메뉴 3</li>
-        </ul>
-    </header>
+    {% if session %}
+        <header>
+            <div class="topnav">
+                <a href="/">레이서 도서관</a>
+                <a href="/">대여기록</a>
+                <a href="/">반납하기</a>
+                <a href="/logout">로그아웃</a>
+            </div>
+        </header>
     {% endif %}
     <main>
         {% block main %}
