--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 <h2>회원가입</h2>
-<form method='post'>
+<form action="/signup" method='post'>
     <input type="text" name='name' placeholder="이름">
     <input type="email" name='email' placeholder="이메일">
     <input type="password" name='password' placeholder="비밀번호">
