--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -11,7 +11,7 @@
                     <!-- <img src={{ book.img }} alt=""> -->
                     <!-- <img src="../data/bookcover/1.png" alt=""> -->
                 </div>
-                <a href="/info/{{ book.id }}" class="title">{{ book.book_name }}</a>
+                <a href="/detail/{{ book.id }}" class="title">{{ book.book_name }}</a>
                 <div class="stars">* * * * *</div>
                 <div class="inventory">x권 남음</div>
                 <button>대여하기</button>
